--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,18 @@
     "version": 2,
     "builds": [
       {
-        "src": "package.json",
-        "use": "@vercel/react"
+        "src": "index.html",
+        "use": "@vercel/static"
+      },
+      {
+        "src": "vite.config.js",
+        "use": "@vercel/node"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/$1"
+        "dest": "/index.html"
       }
     ]
   }
